<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/fragmentA_view"
    android:orientation="vertical"
    android:layout_weight="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/step_title"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/mediaplayer_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

    </FrameLayout>

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/video"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="shyt"
        android:id="@+id/step_detail" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="PREVIOUS STEP"
            />

        <Button
            android:id="@+id/next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="NEXT STEP" />
    </LinearLayout>
    </LinearLayout>


