<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

 <Button
     android:layout_gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="INGREDIENTS"
     tools:ignore="HardcodedText"
     android:id="@+id/ingredients_button"
     android:backgroundTint="@color/colorPrimaryDark">

 </Button>

 <TextView
     android:layout_gravity="center"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="STEPS"
     android:textStyle="italic"
     android:textColor="@color/colorPrimaryDark"
     android:textSize="30sp"/>

 <android.support.v7.widget.RecyclerView
     android:id="@+id/Recyclerview_steps"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center" />

</LinearLayout>